--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.122 2000/02/19 11:26:06 danny Exp $
+$Id: ChangeLog,v 1.123 2000/02/22 23:29:32 danny Exp $
 
 Sun 19 Dec 17:40:28 1999, Danny
 	* Define a function @button(label, command). Motif should
@@ -28,6 +28,8 @@ Sun 19 Dec 17:40:28 1999, Danny
 	  omitted checks for <config.h>.
 	* Worked around a memory overrun problem in SelectCellCB.
 	  Still need to pinpoint it exactly !
+	* Temporarily add the libsciplot sources to the Oleo tree,
+	  until the libsciplot gets incorporated into GNU plotutils.
 
 Wed  1 Dec 22:10:51 1999, Danny
 	* Release 1.99.8.
