--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
-$Id: ChangeLog,v 1.130 2000/07/22 06:13:15 danny Exp $
+$Id: ChangeLog,v 1.131 2000/07/22 06:16:27 danny Exp $
 
+
+Sat 22 Jul 08:16:32 2000, Danny
 	* Conditionally compile only GNU Plotutils support, not gnuplot,
 	  if plotutils is detected by configure.
 	* Start developing curses menus to support plotutils.
