--- a/doc/making-changes.texi
+++ b/doc/making-changes.texi
@@ -146,7 +146,7 @@ containing the cell cursor, and the next 4 rows, type @code{C-u 5 C-k}.
 @item M-k
         Delete the current column.  With an argument count it deletes
 several columns. (@code{delete-col}) For instance, to delete the column that
-@cmindex delete-column
+@cmindex delete-col
 the cell cursor is in, and the 3 columns to the right, type @code{C-u 4 M-k}.
 @item M-C-?
 Delete the contents (value, formula, format, etc) of a
