--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 
-$Id: ChangeLog,v 1.140 2001/02/04 16:11:32 danny Exp $
+$Id: ChangeLog,v 1.141 2001/02/05 00:17:07 pw Exp $
 
+Sun Feb  4 19:10:25 EST 2001  Pete Wyckoff  (pw@osc.edu)
+	* Clean up a bunch of compile warnings.
 
 Sun Feb  4 16:54:38 CET 2001, Danny
 	* Try to get Oleo to stay away from the eight bit. Not bullet-proof
