--- a/README
+++ b/README
@@ -57,7 +57,7 @@ interfaces that you intend to compile into the binary.
 
 For the no-frills interface, try building with the following command line:
 
-  ./configure --without-motif --without-x && make
+  ./configure --without-x && make
 
 This no-frills character terminal interface does not offer support
 for plotting, but otherwise it has the same capabilities as the
@@ -72,22 +72,22 @@ other versions.  This basic Oleo requires the following libraries:
 
 For very basic X11 support, try building with the following:
 
-  ./configure --without-motif --with-x && make
+  ./configure --without-motif && make
 
 This interface provides very little beyond the basic character terminal
 interface built with the previous command, but it will allow you to select a
 cell with the mouse and use the cursor keys in an Xterm.  Like the no-frills
 interface, this offers no support for plotting.  It of course requires the
 basic X11 libraries to compile.  To run an Oleo compiled with X11 with
-the character interface instead, run it with a command line options -x
-or --nw.
+the character interface instead, run it with one of the command line options
+-x or --nw.
 
 
 (3) Motif Interface
 
 To build an Oleo with Motif support, try building with the following:
 
-  ./configure --with-motif && make
+  ./configure && make
 
 The Motif interface shows where Oleo is headed. A binary produced in this
 way can be used in character mode (i.e. by running it with the -x or --nw
@@ -98,3 +98,36 @@ you will need the following libraries on your system:
 	* SciPlot (optional, for charts, if Xlt not used)
 	* GNU plotutils (optional, for charts)
 	* XmHTML (optional, for still-incomplete online documentation)
+
+
+Compiling from CVS
+------------------
+If you are brave enough to download Oleo directly from the CVS:
+
+    cvs -d :pserver:anoncvs@subversions.gnu.org:/cvsroot/oleo checkout oleo
+
+there are a few steps beyond the normal installation procedure
+that are required for a successful build.  This section assumes that
+you have the necessary development tools already installed on your system.
+
+    1.  Use aclocal to build aclocal.m4, the list of macros needed by
+	automake as requested by configure.in:
+
+	aclocal -I m4
+    
+    2.  Run autoheader to generate config.h.in template for configure.
+
+	autoheader
+    
+    3.  Run autoconf to build configure from configure.in:
+
+	autoconf
+    
+    4.  Run automake to generate Makefile.in from Makefile.am throughout
+	the tree.  The "-a" tells it to create links to the system verisons
+	of any missing required files.
+
+	automake -a
+
+Now run configure as before.
+
