--- a/doc/keymaps.texi
+++ b/doc/keymaps.texi
@@ -11,51 +11,47 @@ are no more default maps to scan.
 The different keymaps, and their usage are as follows:
 
 @example
-  universal                     The root of all keymaps.
-  help                          Help commands.
-  mouse                         Bindings for mouse buttons.
-  navigate                      Commands that move the cursor.
-  trolx-navigate                Navigate commands prefixed by @key{C-x}
-  meta-navigate                 Navigate commands prefixed by @key{ESC}.
-  main                          The default keymap.
-  trolx                         Default @key{C-x} commands.
-  meta                          Default @key{ESC} commands.
-  digit                         The numeric prefix keymap.
-  edit                          The keymap for editing in the input area.
-  meta-edit                     Edit commands prefixed by @key{ESC}.
-  trolx-edit                    Edit commands prefixed by @key{C-x}.
-  ansi                          ANSI arrows keys.
+  universal         The root of all keymaps.
+  main              The default keymap.
+  meta              Default @key{ESC} commands.
+  ansi              ANSI arrow keys.
+  trolx             Default @key{C-x} commands.
+  generic-*         More generic versions of the above, work everywhere.
+  mouse             Bindings for mouse buttons.
+  prefix            Number keys, and -, for argument prefix.
+  help              Various levels of help commands.
 @end example
-
-
-
 
 The diagram below shows the relationship between the various keymaps.
 The keymap to the left of a given keymap is its default.
 
 @example
-
-                  | help 
-                  | mouse
-                  | navigate ---------- main ------- digit 
-                  | trolx-navigate ---- trolx  
-  universal ------| meta-navigate ----- meta 
-                  | edit 
-                  | meta-edit
-                  | trolx-edit
-                  | ansi 
-
+                  | generic-main ----| main
+                  |                  | read-string ---| read-<item>*
+		  |
+                  | generic-meta ----| meta
+                  |                  | meta-read-string --- meta-read-formula
+		  |
+                  | generic-ansi ----| ansi
+                  |                  | edit-ansi
+		  |
+                  | generic-trolx ---| trolx
+                  |                  | trolx-read-string
+  universal ------| mouse
+                  | generic-menu
+                  | prefix
+                  | meta-edit-ansi
+                  | read-keyseq
+                  | set-auto-motion
+                  | read-most-chars ---| read-char
+                  |                    | read-menu
+                  | press-any
+                  | view-info
+                  | set-*-attr  (cell, region, default)
+                  | generic-help ---| unprompted-help
+                                    | help
+                                    | verbose-help
 @end example
-
-
-
-
-  
-
-
-
-
-
 
 @table @code
 @item M-x bind-key  
