--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 
-$Id: ChangeLog,v 1.146 2001/02/14 19:22:57 danny Exp $
+$Id: ChangeLog,v 1.147 2001/02/14 20:54:49 danny Exp $
+
+Wed Feb 14 21:56:43 CET 2001, Danny
+	* Change macro CTRL to CTRL_CHAR to avoid name clash with system
+	  defined macro.
+	* doc/Makefile.am correction to allow for building from a
+	  subdirectory.
 
 Wed Feb 14 20:13:27 CET 2001, Danny
 	* Fix a checkin problem - cmd.c was in DOS mode. Ouch.
