--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 
-$Id: ChangeLog,v 1.147 2001/02/14 20:54:49 danny Exp $
+$Id: ChangeLog,v 1.148 2001/03/04 14:08:21 danny Exp $
+
+
+Sun Mar  4 14:54:24 CET 2001, Danny
+	* Remark from Teun Burgers : More recent version of libgsl.a should
+	  be linked with -lgslblas or -lgslblascblas instead of -lgslblasnative.
+	  Changed that in configure.in .
 
 Wed Feb 14 21:56:43 CET 2001, Danny
 	* Change macro CTRL to CTRL_CHAR to avoid name clash with system
