--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,14 @@
 
-$Id: ChangeLog,v 1.148 2001/03/04 14:08:21 danny Exp $
+$Id: ChangeLog,v 1.149 2001/03/09 11:33:29 danny Exp $
 
+Fri Mar  9 12:33:32 CET 2001, danny
+	* src/io-x11.c : Finally found out what was missing to get real i18n
+	  input. I needed to call XFilterEvent(). Thanks to the i18n checklist
+	  in O'Reilly's documentation.
+
+	* src/io-motif.c : Fixes by Robert A. Schmied for running out of colors in
+	  the splash window when Oleo starts (Motif mode), and for passing a NULL
+	  parameter to sprintf when the LANGUAGE parameter doesn't exist.
 
 Sun Mar  4 14:54:24 CET 2001, Danny
 	* Remark from Teun Burgers : More recent version of libgsl.a should
