--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 
-$Id: ChangeLog,v 1.150 2001/03/10 14:38:01 danny Exp $
+$Id: ChangeLog,v 1.151 2001/03/25 00:22:13 pw Exp $
+
+Sat Mar 24 19:02:08 EST 2001  Pete Wyckoff  <pw@osc.edu>
+	* m4/xbae.m4: Complete conversion of ICE_Xbae -> AC_XBAE.
+	* src/io-term.c: Clean up Preferences[].var casting.
+	* src/mdi.h: Remove non-comment after #endif.
 
 Sat Mar 10 15:39:01 CET 2001, danny
 	* Release oleo 1.99.16
